[package]
name = "cuda-immutable"
version = "0.1.0"
edition = "2021"
description = "Persistent vector and hash map with structural sharing"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Lucineer/cuda-immutable"
readme = "README.md"
keywords = ["ai", "fleet", "agent", "rust"]
categories = ["science"]

[dependencies]
serde = { version = "1", features = ["derive"] }
